[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mybci"
version = "0.1.0"
description = "Modular OCR and document parsing system"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["ocr", "document", "layout", "nlp", "ai"]

# 依赖项（基础环境）
dependencies = [
    "numpy",
    "pandas",
    "pillow",
    "pytesseract",
    "opencv-python",
    "requests",
    "pydantic",
    "rich",
]

# 开发/调试依赖
[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
    "ipython",
]
web = [
    "fastapi",
    "uvicorn",
    "jinja2",
]
ml = [
    "torch",
    "transformers",
    "paddleocr",
    "layoutparser",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.flake8]
max-line-length = 100
exclude = ["__pycache__", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
